--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,9 @@
         "php": "^8.1",
         "ext-json": "*",
         "archtechx/enums": "^0.3.2",
+        "doctrine/dbal": "^3.6",
         "dragon-code/laravel-support": "^3.6",
-        "dragon-code/support": "^6.11.2",
+        "dragon-code/support": "^6.11.2", 
         "guzzlehttp/guzzle": "^7.7",
         "illuminate/bus": "^10.15",
         "illuminate/console": "^10.15",
